<resources>
    <string name="app_name">tic_tac_toe</string>
    <string name="tic_tac_toe">Tic tac toe</string>
    <string name="player_1_score">Player-1 Score</string>
    <string name="player_2_score">Player-2 Score</string>
    <string name="_0">0</string>
    <string name="status">Status</string>
    <string name="play_again">Play Again</string>
    <string name="reset">Reset</string>
</resources>