<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background = "@drawable/gradient"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textSize="40sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/red"
        />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/first_player"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/player_1_score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/second_player"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/player_2_score"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_toEndOf="@id/first_player"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/score_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_below="@id/first_player"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/score_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_below="@id/second_player"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_toEndOf="@id/score_1"
            />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relative_layout"
        android:layout_marginTop="75dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_0"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                android:text=""
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textSize="45sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                android:text=""
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/linearlayout"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:textStyle="italic"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_again"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_marginTop="25dp"
        android:layout_marginStart="85dp"
        android:background="@drawable/btn"
        android:padding="2dp"
        android:text="@string/play_again"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:background = "@drawable/btn"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/play_again"
        android:layout_below="@id/status"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="18sp"
        android:padding="10dp"
        />

</RelativeLayout>